fix(index): fix spacing in each post on the index page
Add extra spacing between posts.
Lessen spacing between title and date in each list item.

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -174,7 +174,7 @@
     list-style: none;
 
     > li {
-        margin-bottom: $spacing-unit;
+        margin-bottom: $spacing-unit * 2;
     }
 }
 
@@ -186,6 +186,7 @@
 .post-link {
     display: block;
     font-size: 24px;
+    height: $spacing-unit / 1.2;
 }
 
 
